[package]
name = "mofa-monitoring"
version.workspace = true
edition.workspace = true
description = "MoFA Monitoring - Web-based dashboard and metrics collection"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/mofa-monitoring"
readme = "README.md"
keywords = [
    "ai",
    "agent",
    "monitoring",
    "observability",
    "dashboard",
    "metrics",
]
categories = ["development-tools"]
publish = true

[dependencies]
# Workspace dependencies
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }
chrono.workspace = true
thiserror.workspace = true
rand.workspace = true
hex.workspace = true
lazy_static.workspace = true
sha2.workspace = true
# HTTP server dependencies
axum = { workspace = true, features = ["macros", "ws"] }
tower = { version = "0.5", features = ["util", "timeout"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }

# Static file embedding
rust-embed = { version = "8.0", features = ["compression"] }
mime_guess = "2.0"

# Local dependencies
mofa-kernel = { path = "../mofa-kernel", version = "0.1" }
futures = "0.3.31"

# System metrics
sysinfo = "0.32"

[dev-dependencies]
tokio-tungstenite = "0.24"
futures-util = "0.3"
mofa-foundation = { path = "../mofa-foundation" }
mofa-kernel = { path = "../mofa-kernel" }

[lints]
workspace = true
