[package]
name = "mofa-plugins"
version.workspace = true
edition.workspace = true

[dependencies]
# Workspace dependencies
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tokio-stream = { workspace = true }
anyhow.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
notify.workspace = true
libloading.workspace = true
tempfile.workspace = true
sha2.workspace = true
tracing.workspace = true
uuid = {workspace = true,features = ["v7"]}
rand.workspace = true
# WASM plugin runtime
wasmtime = { version = "40", features = ["component-model", "async"] }
# Local dependencies
mofa-kernel = { path = "../mofa-kernel" }
reqwest = { version = "0.12.28", features = ["json", "rustls-tls"] }
chrono = { workspace = true, features = ["serde"] }
mofa-extra = { version = "0.1.0", path = "../mofa-extra" }
rhai = { version = "1.20", features = ["sync", "serde"] }
url = "2.5.7"
regex = "1.12.2"
walkdir = "2.4"
which = "7"
# TTS support (optional - using kokoros for real TTS)
rodio = { version = "0.17", optional = true }
kokoro-tts = { git = "https://github.com/aios-rs/kokoro.git", branch = "master", optional = true }
# Model download support
hf-hub = "0.4"
tokio-util = { version = "0.7", features = ["io"] }
dirs = "5.0"
md-5 = "0.10"
backoff = { version = "0.4", features = ["tokio"] }
futures = "0.3"

[features]
default = []
rodio = ["dep:rodio"]
kokoro = ["dep:kokoro-tts"]  # Feature flag for Kokoro TTS support
