[package]
name = "mofa-runtime"
version.workspace = true
edition.workspace = true
description = "MoFA Runtime - Message bus, agent registry, and event loop"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/mofa-runtime"
readme = "README.md"
keywords = ["ai", "agent", "runtime", "actor", "message-bus"]
categories = ["development-tools", "asynchronous"]
publish = true

[dependencies]
# Workspace dependencies
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
tokio.workspace = true
tracing.workspace = true
flume.workspace = true
uuid.workspace = true
thiserror.workspace = true
eyre.workspace = true

# Local dependencies
mofa-kernel = { path = "../mofa-kernel", version = "0.1", features = ["config"] }
mofa-plugins = { path = "../mofa-plugins", version = "0.1" }
mofa-monitoring = { path = "../mofa-monitoring", version = "0.1", optional = true }
# Dora-rs dependencies
dora-node-api = { version = "0", default-features = false, optional = true }
dora-operator-api = { version = "0", default-features = false, optional = true }
dora-daemon = { version = "0", default-features = false, optional = true }
dora-core = { version = "0", features = ["build"], optional = true }
dora-message = { version = "0", optional = true }

serde_yaml = { workspace = true }
toml = "0.8"
config.workspace = true
regex.workspace = true
chrono.workspace = true
cron = "0.12"

[lints]
workspace = true

[features]
dora = ["dora-node-api", "dora-operator-api", "dora-daemon", "dora-core", "dora-message"]
monitoring = ["dep:mofa-monitoring"]
