[package]
name = "admission_gate_demo"
version = "0.1.0"
edition = "2024"
description = "Demonstration of StateGraph OOM prevention using PR 390 Memory Admission Control & LRU Eviction"

[dependencies]
mofa-kernel = { path = "../../crates/mofa-kernel" }
mofa-foundation = { path = "../../crates/mofa-foundation" }
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
