[package]
name = "agent_budget_management"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true

# Local dependencies
mofa-sdk = { path = "../../crates/mofa-sdk" }

# Workspace dependencies
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
