[package]
name = "agent_builder"
version.workspace = true
edition.workspace = true

[[bin]]
name = "agent_builder"
path = "src/main.rs"

[dependencies]
mofa-sdk = { path = "../../crates/mofa-sdk" }

tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true

[lints]
workspace = true
