[package]
name = "agent_from_database_streaming"
version.workspace = true
edition.workspace = true

[dependencies]
mofa-sdk = { path = "../../crates/mofa-sdk", features = ["persistence-postgres"] }
tokio.workspace = true
futures.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
