[package]
name = "agent_with_plugins_and_rhai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mofa-sdk = { path = "../../crates/mofa-sdk" }
async-trait = "0.1.68"
tokio = { version = "1.32.0", features = ["full", "process"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.2"
uuid = { version = "1.3.3", features = ["v7"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
notify = "6.1"
